# bid-announce-system

./: .dockerignore  .env.example  .gitignore  .mypy.ini  .ruff.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docker-publish.yml  qa.yml
.workbuddy/: expert-history.json
.workbuddy/memory/: 2026-04-11.md  MEMORY.md
data/: announcements.json
docs/: deployment.md  技术开发规划_中标结果公示系统.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  auth.tsx  utils.test.ts  utils.ts
frontend/src/pages/: Announcements.tsx  Crawler.tsx  Dashboard.tsx  Export.tsx  Login.tsx  Marketing.tsx  Notifications.tsx  Schedules.tsx  Winners.tsx
scripts/: init_db.py  qa_deploy.bat  qa_deploy.sh  run_crawler.py  run_deep_crawler.py  start_server.py  test_e2e.py  test_endpoints.py
src/ai/: __init__.py  analyzer.py
src/api/: app.py  app_v2.py  auth.py  deps.py
src/api/routes/: __init__.py  announcements.py  auth.py  crawler.py  dashboard.py  export.py  marketing.py  notifications.py  schedules.py
src/config/: selectors.py  settings.py  urls.py
src/core/: fetcher.py  notifier.py  parser.py  rate_limiter.py  scheduler.py  security.py  sqlite_storage.py  storage.py
src/crawlers/: __init__.py  announcement.py  base.py  deep_crawler.py  registry.py
src/db/: __init__.py  database.py  models.py
src/models/: announcement.py  enums.py  validators.py
src/notifications/: __init__.py  channels.py  manager.py
src/pipelines/: cleaning.py  deduplication.py  enrichment.py
src/utils/: logger.py  retry.py  time_utils.py
tests/: conftest.py  test_api.py  test_security.py
tests/integration/: test_crawler.py
tests/unit/: test_models.py  test_parser.py  test_rate_limiter.py
web/: index.html
web/assets/: index-B2E6xnAd.css  index-CBUL1qkV.css  index-CsydlDNz.js  index-CuSIF_Jf.js  index-DwOG5wTY.js  ui-B0-YDYXM.js  vendor-B60asj_T.js
